--- a/README.org
+++ b/README.org
@@ -24,3 +24,11 @@ This example assumes the use of a SSH for Gitlab as well as a Debian based distr
 
   pip install -r requirements.txt
 #+END_SRC
+
+* udev rules warning
+This setup can be used if you receive the "Insufficient permissions" warning related to udev:
+
+#+BEGIN_SRC sh
+  echo 'SUBSYSTEM=="usb", ATTRS{idVendor}=="03e7", MODE="0666"' | sudo tee /etc/udev/rules.d/80-movidius.rules
+  sudo udevadm control --reload-rules && sudo udevadm trigger
+#+END_SRC
